kubernetes/full-stack-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: full-stack-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: angular-app-service
            port:
              number: 80
      - path: /auth/
        pathType: ImplementationSpecific
        backend:
          service:
            name: keycloak-service
            port:
              number: 8080
      - path: /api/
        pathType: ImplementationSpecific
        backend:
          service:
            name: express-server-service
            port:
              number: 3000
